fix subscribe page and other layout issues

--- a/app/assets/stylesheets/frontend/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/frontend/bootstrap_and_overrides.css.less
@@ -17,7 +17,7 @@
 }
 
 .container-content {
-  margin-top: 65px;
+  margin-top: 85px;
 }
 
 @media (max-width: 1000px) {
