--- a/app/assets/stylesheets/frontend/plans.css.sass
+++ b/app/assets/stylesheets/frontend/plans.css.sass
@@ -1,4 +1,11 @@
+
 /*-- Plan --
+.plan-container
+  min-width: 300px
+  max-width: 360px
+  width: 100%
+  float: left
+  margin: 20px 20px 0 0
 
 .plan
   margin-right: 6px
